--- a/css/local-styles.css
+++ b/css/local-styles.css
@@ -1,7 +1,7 @@
 body{font-family:'Roboto',sans-serif;font-size:1em;}/*background-color:#000;*/
 header{display:table;width:100%;}
-#docs{display:none;}
-h1{font-family:'Fugaz One',sans-serif;padding-top:20px;text-align:center;color:orange;font-weight:bold;font-size:2.5em;margin:1rem 0;text-shadow: 2px 2px #fc007e;display:table-cell;vertical-align:middle;}
+/*#docs{} display:none;*/
+h1{font-family:'Fugaz One',sans-serif;padding-top:20px;text-align:center;color:silver;font-weight:bold;font-size:2.5em;margin:1rem 0;text-shadow: 2px 2px #000;display:table-cell;vertical-align:middle;}
 /* .trans-top,.trans-bottom{height:30px;} */
 /* .trans-top{background:linear-gradient(180deg,rgba(0,0,0,1)0%,rgba(0,212,255,0)100%);} */
 /* .trans-bottom{background:linear-gradient(0deg,rgba(0,0,0,1)0%,rgba(0,212,255,0)100%);} */
@@ -9,20 +9,20 @@ h1{font-family:'Fugaz One',sans-serif;padding-top:20px;text-align:center;color:o
 .ops-container{display:inline-block;width:100%;}
 .right{float:right;}
 .left{float:left;}
-fieldset{margin:0 4rem 1rem;border:2px solid #fc007e;background-color:white;}
-legend{font-size:1.25em;font-weight:100;background-color:#fff;border-radius:8px;padding:0px 24px 3px 6px;color:orange;border:2px solid #fc007e;text-shadow: 1px 1px #fc007e;}
+fieldset{margin:0 4rem 1rem;background-color:#FFF;border:2px solid #000}
+legend{font-size:1.25em;font-weight:100;background-color:#fff;border-radius:8px;padding:0px 24px 3px 6px;color:#000;border:2px solid #000;text-shadow: 1px 1px silver;}
 .grid{display:flex;flex-wrap:wrap;flex-flow:row wrap;justify-content:center;align-items:center;}
-.grid-item{display:flex;align-items:center;justify-content:space-around;margin:4px;border:2px solid #fc007e;border-radius:8px;text-align:center;height:60px;flex-basis:9%;}
+.grid-item{display:flex;align-items:center;justify-content:space-around;margin:4px;border:2px solid #000;border-radius:8px;text-align:center;height:60px;flex-basis:9%;}
 @media(max-width:1047px){.grid-item{flex-basis:8.5%;height:45px}}        
 @media(max-width:775px){.left{float:none;}.right{float:none;}button,select{width:100%!important;text-align:left;}body{background-size:75%;}}        
 @media(max-width:714px){.grid-item{flex-basis:8%;}.grid-item{height:30px;font-size:x-small!important}h1{margin:1.5rem 0 ;font-size:2rem;display:table-caption;}}        
 @media(max-width:547px){.grid-item{flex-basis:7.5%;}}        
 @media(max-width:447px){.grid-item{flex-basis:14.5%;}body{background-size:100%;}} 
-input,select,textarea,button{font-family:inherit;font-size:inherit;background-color:orange;margin:4px;padding-top:2px;border:none;
-    border-bottom:solid 3px #fc007e;vertical-align:top;}
+input,select,textarea,button{font-family:inherit;font-size:inherit;background-color:silver;margin:4px;padding-top:2px;border:none;
+    border-bottom:solid 3px #000;vertical-align:top;}
 button{height:27px;}
 select {
-    width:140px;
+    width:165px;
     height: 27px;
     padding: 0 6px;
     -webkit-appearance:none;
@@ -34,3 +34,33 @@ select {
     background-repeat:no-repeat;
 }
 select::-ms-expand {display: none;}
+/*color options*/
+h1.color1{color:orange!important;text-shadow: 2px 2px #fc007e!important;}
+fieldset.color1,legend.color1,.color1 .grid-item{border:2px solid #fc007e!important;}
+legend.color1 {color:orange!important;}
+.color1 select,.color1 button{color:#000;background-color:orange!important;border-bottom:solid 3px #fc007e!important;}
+
+h1.color2{color:dodgerblue!important;text-shadow: 2px 2px purple!important;}
+fieldset.color2,legend.color2,.color2 .grid-item{border:2px solid purple!important;}
+legend.color2{color:dodgerblue!important;}
+.color2 select,.color2 button{color:#FFF;background-color:dodgerblue!important;border-bottom:solid 3px purple!important;}
+
+h1.color3{color:#86DC3D!important;text-shadow: 2px 2px lime!important;}
+fieldset.color3,legend.color3,.color3 .grid-item{border:2px solid lime!important;}
+legend.color3{color:#86DC3D!important;}
+.color3 select,.color3 button{color:#000;background-color:#86DC3D!important;border-bottom:solid 3px lime!important;}
+
+h1.color4{color:#F4DECB!important;text-shadow: 2px 2px #9A7B4F!important;}
+fieldset.color4,legend.color4,.color4 .grid-item{border:2px solid #9A7B4F!important;}
+legend.color4{color:#F4DECB!important;}
+.color4 select,.color4 button{color:#000;background-color:#F4DECB!important;border-bottom:solid 3px #9A7B4F!important;}
+
+h1.color5{color:#66CCCC!important;text-shadow: 2px 2px #008080!important;}
+fieldset.color5,legend.color5,.color5 .grid-item{border:2px solid #008080!important;}
+legend.color5{color:#66CCCC!important;}
+.color5 select,.color5 button{color:#000;background-color:#66CCCC!important;border-bottom:solid 3px #008080!important;}
+
+h1.color6{color:#8D264D!important;text-shadow: 2px 2px #FFCF40!important;}
+fieldset.color6,legend.color6,.color6 .grid-item{border:2px solid #FFCF40!important;}
+legend.color6{color:#8D264D!important;}
+.color6 select,.color6 button{color:#FFF;background-color:#8D264D!important;border-bottom:solid 3px #FFCF40!important;}
