--- a/css/local-styles.css
+++ b/css/local-styles.css
@@ -1,11 +1,10 @@
-body{font-family:'Roboto',sans-serif;font-size:1em;}/*background-color:#000;*/
-header{display:table;width:100%;}
-/*#docs{} display:none;*/
+body{font-family:'Roboto',sans-serif;font-size:1em;}
+header{display:table;width:100%;background-color:#000;}
 h1{font-family:'Fugaz One',sans-serif;padding-top:20px;text-align:center;color:silver;font-weight:bold;font-size:2.5em;margin:1rem 0;text-shadow: 2px 2px #000;display:table-cell;vertical-align:middle;}
-/* .trans-top,.trans-bottom{height:30px;} */
-/* .trans-top{background:linear-gradient(180deg,rgba(0,0,0,1)0%,rgba(0,212,255,0)100%);} */
-/* .trans-bottom{background:linear-gradient(0deg,rgba(0,0,0,1)0%,rgba(0,212,255,0)100%);} */
-#app{margin:1rem 0;padding-bottom:0em} /*background:url("../images/numbers-bg-1920.jpg") top / 45% repeat;*/
+.trans-top,.trans-bottom{height:30px;}
+.trans-top{background:linear-gradient(180deg,rgba(0,0,0,1)0%,rgba(0,212,255,0)100%);}
+.trans-bottom{background:linear-gradient(0deg,rgba(0,0,0,1)0%,rgba(0,212,255,0)100%);}
+#app{margin:1rem 0;padding-bottom:0em;background:url("../images/numbers-bg-1920.jpg") top / 45% repeat;}
 .ops-container{display:inline-block;width:100%;}
 .right{float:right;}
 .left{float:left;}
@@ -37,35 +36,35 @@ select::-ms-expand {display: none;}
 /*color options*/
 h1.color1{color:silver!important;text-shadow: 2px 2px black!important;}
 fieldset.color1,legend.color1,.color1 .grid-item{border:2px solid black!important;}
-legend.color1 {color:silver!important;}
+legend.color1 {color:silver!important;text-shadow: 1px 1px black;}
 .color1 select,.color1 button{color:#000;background-color:silver!important;border-bottom:solid 3px black!important;}
 
 h1.color2{color:orange!important;text-shadow: 2px 2px #fc007e!important;}
 fieldset.color2,legend.color2,.color2 .grid-item{border:2px solid #fc007e!important;}
-legend.color2 {color:orange!important;}
+legend.color2 {color:orange!important;text-shadow: 1px 1px #fc007e;}
 .color2 select,.color2 button{color:#000;background-color:orange!important;border-bottom:solid 3px #fc007e!important;}
 
 h1.color3{color:dodgerblue!important;text-shadow: 2px 2px purple!important;}
 fieldset.color3,legend.color3,.color3 .grid-item{border:2px solid purple!important;}
-legend.color3{color:dodgerblue!important;}
+legend.color3{color:dodgerblue!important;text-shadow: 1px 1px purple;}
 .color3 select,.color3 button{color:#FFF;background-color:dodgerblue!important;border-bottom:solid 3px purple!important;}
 
 h1.color4{color:#98FB98!important;text-shadow: 2px 2px lime!important;}
 fieldset.color4,legend.color4,.color4 .grid-item{border:2px solid lime!important;}
-legend.color4{color:#98FB98!important;}
+legend.color4{color:#98FB98!important;text-shadow: 1px 1px lime;} 
 .color4 select,.color4 button{color:#000;background-color:#98FB98!important;border-bottom:solid 3px lime!important;}
 
 h1.color5{color:#D2B48C!important;text-shadow: 2px 2px #B8860B!important;}
 fieldset.color5,legend.color5,.color5 .grid-item{border:2px solid #B8860B!important;}
-legend.color5{color:#D2B48C!important;}
+legend.color5{color:#D2B48C!important;text-shadow: 1px 1px #B8860B;}
 .color5 select,.color5 button{color:#000;background-color:#D2B48C!important;border-bottom:solid 3px #B8860B!important;}
 
 h1.color6{color:#00FFFF!important;text-shadow: 2px 2px #008080!important;}
 fieldset.color6,legend.color6,.color6 .grid-item{border:2px solid #008080!important;}
-legend.color6{color:#00FFFF!important;}
+legend.color6{color:#00FFFF!important;text-shadow: 1px 1px #008080;}
 .color6 select,.color6 button{color:#000;background-color:#00FFFF!important;border-bottom:solid 3px #008080!important;}
 
 h1.color7{color:#B22222!important;text-shadow: 2px 2px #FFCF40!important;}
 fieldset.color7,legend.color7,.color7 .grid-item{border:2px solid #FFCF40!important;}
-legend.color7{color:#B22222!important;}
+legend.color7{color:#B22222!important;text-shadow: 1px 1px #FFCF40;}
 .color7 select,.color7 button{color:#FFF;background-color:#B22222!important;border-bottom:solid 3px #FFCF40!important;}
