--- a/css/local-styles.css
+++ b/css/local-styles.css
@@ -12,16 +12,12 @@ fieldset{margin:0 4rem 1rem;background-color:#FFF;border:2px solid #000}
 legend{font-size:1.25em;font-weight:100;background-color:#fff;border-radius:8px;padding:0px 24px 3px 6px;color:#000;border:2px solid #000;text-shadow: 1px 1px silver;}
 .grid{display:flex;flex-wrap:wrap;flex-flow:row wrap;justify-content:center;align-items:center;}
 .grid-item{display:flex;align-items:center;justify-content:space-around;margin:4px;border:2px solid #000;border-radius:8px;text-align:center;height:60px;flex-basis:9%;}
-@media(max-width:1047px){.grid-item{flex-basis:8.5%;height:45px}}        
-@media(max-width:775px){.left{float:none;}.right{float:none;}button,select{width:100%!important;text-align:left;}body{background-size:75%;}}        
-@media(max-width:714px){.grid-item{flex-basis:8%;}.grid-item{height:30px;font-size:x-small!important}h1{margin:1.5rem 0 ;font-size:2rem;display:table-caption;}}        
-@media(max-width:547px){.grid-item{flex-basis:7.5%;}}        
-@media(max-width:447px){.grid-item{flex-basis:14.5%;}body{background-size:100%;}} 
+
 input,select,textarea,button{font-family:inherit;font-size:inherit;background-color:silver;margin:4px;padding-top:2px;border:none;
     border-bottom:solid 3px #000;vertical-align:top;}
 button{height:27px;}
 select {
-    width:165px;
+    width:184px;
     height: 27px;
     padding: 2px 6px;
     -webkit-appearance:none;
@@ -32,7 +28,6 @@ select {
     background-position:calc(100% - .5em) center;
     background-repeat:no-repeat;
 }
-select::-ms-expand {display: none;}
 .hide{display:none;}
 .show{display:inline;}
 /*color options*/
@@ -70,3 +65,9 @@ h1.color6{color:#B22222!important;text-shadow: 2px 2px #FFCF40!important;}
 fieldset.color6,legend.color6,.color6 .grid-item{border:2px solid #FFCF40!important;}
 legend.color6{color:#B22222!important;text-shadow: 1px 1px #FFCF40;}
 .color6 select,.color6 button{color:#FFF;background-color:#B22222!important;border-bottom:solid 3px #FFCF40!important;}
+
+/*media queries*/
+@media(max-width:1047px){.grid-item{flex-basis:8.5%;height:45px}.left{float:none;}.right{float:none;}button,select{width:100%!important;text-align:left;}}        
+@media(max-width:714px){.grid-item{flex-basis:8%;height:30px;font-size:x-small!important}h1{margin:1.5rem 0;font-size:2rem;}}
+@media(max-width:547px){.grid-item{flex-basis:7.5%;}}        
+@media(max-width:447px){.grid-item{flex-basis:14.5%;}}
