cleanup  prior to release

--- a/css/local-styles.css
+++ b/css/local-styles.css
@@ -1,72 +1,65 @@
+/*elements*/
 body{font-family:'Roboto',sans-serif;font-size:1em;background-color:#000;}
 header{display:table;width:100%;background-color:#000;}
-h1{font-family:'Fugaz One',sans-serif;padding-top:20px;text-align:center;color:silver;font-weight:bold;font-size:2.5em;margin:1rem 0;text-shadow: 2px 2px #000;display:table-cell;vertical-align:middle;}
+h1{font-family:'Fugaz One',sans-serif;padding-top:20px;text-align:center;color:silver;font-weight:bold;font-size:2.5em;margin:1rem 0;text-shadow:2px 2px #000;display:table-cell;vertical-align:middle;}
+fieldset{margin:0 4rem 1rem;background-color:#FFF;border:2px solid #000}
+legend{font-size:1.25em;font-weight:100;background-color:#fff;border-radius:8px;padding:0px 24px 3px 6px;color:#000;border:2px solid #000;text-shadow:1px 1px silver;}
+input,select,textarea,button{font-family:inherit;font-size:inherit;background-color:silver;margin:4px;padding-top:2px;border:none;border-bottom:solid 3px #000;vertical-align:top;}
+button{height:27px;}
+select{width:184px;height:27px;padding:2px 6px;-webkit-appearance:none;-moz-appearance:none;appearance:none;background-image:url("data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2212%22%20height%3D%2212%22%20viewBox%3D%220%200%2012%2012%22%3E%3Ctitle%3Edown-arrow%3C%2Ftitle%3E%3Cg%20fill%3D%22%23000000%22%3E%3Cpath%20d%3D%22M10.293%2C3.293%2C6%2C7.586%2C1.707%2C3.293A1%2C1%2C0%2C0%2C0%2C.293%2C4.707l5%2C5a1%2C1%2C0%2C0%2C0%2C1.414%2C0l5-5a1%2C1%2C0%2C1%2C0-1.414-1.414Z%22%20fill%3D%22%23000000%22%3E%3C%2Fpath%3E%3C%2Fg%3E%3C%2Fsvg%3E");background-size:.75em;background-position:calc(100% - .5em)center;background-repeat:no-repeat;}
+
+/*ids*/
+#app{margin:1rem 0;padding-bottom:0em;background:url("../images/numbers-bg-1920.jpg") top / 45% repeat;}
+
+/*classes*/
 .trans-top,.trans-bottom{height:30px;}
 .trans-top{background:linear-gradient(180deg,rgba(0,0,0,1)0%,rgba(0,212,255,0)100%);}
 .trans-bottom{background:linear-gradient(0deg,rgba(0,0,0,1)0%,rgba(0,212,255,0)100%);}
-#app{margin:1rem 0;padding-bottom:0em;background:url("../images/numbers-bg-1920.jpg") top / 45% repeat;}
 .ops-container{display:inline-block;width:100%;}
 .right{float:right;}
 .left{float:left;}
-fieldset{margin:0 4rem 1rem;background-color:#FFF;border:2px solid #000}
-legend{font-size:1.25em;font-weight:100;background-color:#fff;border-radius:8px;padding:0px 24px 3px 6px;color:#000;border:2px solid #000;text-shadow: 1px 1px silver;}
 .grid{display:flex;flex-wrap:wrap;flex-flow:row wrap;justify-content:center;align-items:center;}
 .grid-item{display:flex;align-items:center;justify-content:space-around;margin:4px;border:2px solid #000;border-radius:8px;text-align:center;height:60px;flex-basis:9%;}
-
-input,select,textarea,button{font-family:inherit;font-size:inherit;background-color:silver;margin:4px;padding-top:2px;border:none;
-    border-bottom:solid 3px #000;vertical-align:top;}
-button{height:27px;}
-select {
-    width:184px;
-    height: 27px;
-    padding: 2px 6px;
-    -webkit-appearance:none;
-    -moz-appearance:none;
-    appearance:none;
-    background-image:url("data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2212%22%20height%3D%2212%22%20viewBox%3D%220%200%2012%2012%22%3E%3Ctitle%3Edown-arrow%3C%2Ftitle%3E%3Cg%20fill%3D%22%23000000%22%3E%3Cpath%20d%3D%22M10.293%2C3.293%2C6%2C7.586%2C1.707%2C3.293A1%2C1%2C0%2C0%2C0%2C.293%2C4.707l5%2C5a1%2C1%2C0%2C0%2C0%2C1.414%2C0l5-5a1%2C1%2C0%2C1%2C0-1.414-1.414Z%22%20fill%3D%22%23000000%22%3E%3C%2Fpath%3E%3C%2Fg%3E%3C%2Fsvg%3E");
-    background-size:.75em;
-    background-position:calc(100% - .5em) center;
-    background-repeat:no-repeat;
-}
 .hide{display:none;}
 .show{display:inline;}
+
 /*color options*/
-h1.color0{color:silver!important;text-shadow: 2px 2px black!important;}
+h1.color0{color:silver!important;text-shadow:2px 2px black!important;}
 fieldset.color0,legend.color0,.color0 .grid-item{border:2px solid black!important;}
-legend.color0 {color:silver!important;text-shadow: 1px 1px black;}
+legend.color0 {color:silver!important;text-shadow:1px 1px black;}
 .color0 select,.color0 button{color:#000;background-color:silver!important;border-bottom:solid 3px black!important;}
 
-h1.color1{color:orange!important;text-shadow: 2px 2px #fc007e!important;}
+h1.color1{color:orange!important;text-shadow:2px 2px #fc007e!important;}
 fieldset.color1,legend.color1,.color1 .grid-item{border:2px solid #fc007e!important;}
-legend.color1 {color:orange!important;text-shadow: 1px 1px #fc007e;}
+legend.color1 {color:orange!important;text-shadow:1px 1px #fc007e;}
 .color1 select,.color1 button{color:#000;background-color:orange!important;border-bottom:solid 3px #fc007e!important;}
 
-h1.color2{color:dodgerblue!important;text-shadow: 2px 2px purple!important;}
+h1.color2{color:dodgerblue!important;text-shadow:2px 2px purple!important;}
 fieldset.color2,legend.color2,.color2 .grid-item{border:2px solid purple!important;}
-legend.color2{color:dodgerblue!important;text-shadow: 1px 1px purple;}
+legend.color2{color:dodgerblue!important;text-shadow:1px 1px purple;}
 .color2 select,.color2 button{color:#FFF;background-color:dodgerblue!important;border-bottom:solid 3px purple!important;}
 
-h1.color3{color:#98FB98!important;text-shadow: 2px 2px lime!important;}
+h1.color3{color:#98FB98!important;text-shadow:2px 2px lime!important;}
 fieldset.color3,legend.color3,.color3 .grid-item{border:2px solid lime!important;}
-legend.color3{color:#98FB98!important;text-shadow: 1px 1px lime;} 
+legend.color3{color:#98FB98!important;text-shadow:1px 1px lime;} 
 .color3 select,.color3 button{color:#000;background-color:#98FB98!important;border-bottom:solid 3px lime!important;}
 
-h1.color4{color:#D2B48C!important;text-shadow: 2px 2px #B8860B!important;}
+h1.color4{color:#D2B48C!important;text-shadow:2px 2px #B8860B!important;}
 fieldset.color4,legend.color4,.color4 .grid-item{border:2px solid #B8860B!important;}
-legend.color4{color:#D2B48C!important;text-shadow: 1px 1px #B8860B;}
+legend.color4{color:#D2B48C!important;text-shadow:1px 1px #B8860B;}
 .color4 select,.color4 button{color:#000;background-color:#D2B48C!important;border-bottom:solid 3px #B8860B!important;}
 
-h1.color5{color:#00FFFF!important;text-shadow: 2px 2px #008080!important;}
+h1.color5{color:#00FFFF!important;text-shadow:2px 2px #008080!important;}
 fieldset.color5,legend.color5,.color5 .grid-item{border:2px solid #008080!important;}
-legend.color5{color:#00FFFF!important;text-shadow: 1px 1px #008080;}
+legend.color5{color:#00FFFF!important;text-shadow:1px 1px #008080;}
 .color5 select,.color5 button{color:#000;background-color:#00FFFF!important;border-bottom:solid 3px #008080!important;}
 
-h1.color6{color:#B22222!important;text-shadow: 2px 2px #FFCF40!important;}
+h1.color6{color:#B22222!important;text-shadow:2px 2px #FFCF40!important;}
 fieldset.color6,legend.color6,.color6 .grid-item{border:2px solid #FFCF40!important;}
-legend.color6{color:#B22222!important;text-shadow: 1px 1px #FFCF40;}
+legend.color6{color:#B22222!important;text-shadow:1px 1px #FFCF40;}
 .color6 select,.color6 button{color:#FFF;background-color:#B22222!important;border-bottom:solid 3px #FFCF40!important;}
 
-/*media queries*/
+/*queries*/
 @media(max-width:1047px){.grid-item{flex-basis:8.5%;height:45px}.left{float:none;}.right{float:none;}button,select{width:100%!important;text-align:left;}}        
 @media(max-width:714px){.grid-item{flex-basis:8%;height:30px;font-size:x-small!important}h1{margin:1.5rem 0;font-size:2rem;}}
 @media(max-width:547px){.grid-item{flex-basis:7.5%;}}        
