fix favicon and add link to no-bg and lighten breadcrumbs

--- a/css/local-styles.css
+++ b/css/local-styles.css
@@ -25,7 +25,7 @@ select{width:184px;height:27px;padding:2px 6px;-webkit-appearance:none;-moz-appe
 .bc-div{margin-top:-2rem;padding:0 0 .5rem 0;background-color:#000;}
 .breadcrumbs {margin:0 0 1.5rem 4rem;padding:0;color:#2d8bf0;background-color:#000!important;}
 .breadcrumbs li{display:inline;}
-.breadcrumbs a{color:#1674D9;text-decoration:none;}
+.breadcrumbs a{color:#6298d3;text-decoration:none;}
 .breadcrumbs a:hover{color:#fff;text-decoration:underline;}
 
 /*color options*/
