tweak breadcrumbs once more

--- a/css/local-styles.css
+++ b/css/local-styles.css
@@ -23,10 +23,10 @@ select{width:184px;height:27px;padding:2px 6px;-webkit-appearance:none;-moz-appe
 .grid-item{display:flex;align-items:center;justify-content:space-around;margin:4px;border:2px solid #000;border-radius:8px;text-align:center;height:60px;flex-basis:9%;}
 .hide{display:none;}
 .show{display:inline;}
-.bc-div{margin:-5rem 4rem 0 4rem;padding:0 0 .5rem 0;background: linear-gradient(270deg, rgba(0,0,0,1) 0%, rgba(255,255,255,1) 100%);}
-.breadcrumbs {margin: 0 0 .5rem 4rem;padding: 1rem 0 0 0;color:#2d8bf0;}
+.bc-div{border:1px solid white;background-color:#d6d5d5;margin:-5rem 4rem 0 4rem;padding:0 0 .5rem 0;}/*background: linear-gradient(270deg, rgba(0,0,0,1) 0%, rgba(255,255,255,1) 100%);*/
+.breadcrumbs {margin: 0 0 .5rem 4rem;padding: 1rem 0 0 0;color:white;}
 .breadcrumbs li{display:inline;}
-.breadcrumbs a{color:#6298d3;text-decoration:none;}
+.breadcrumbs a{color:dodgerblue;text-decoration:none;}
 .breadcrumbs a:hover{color:#fff;text-decoration:underline;}
 
 /*color options*/
@@ -34,36 +34,43 @@ h1.color0{color:silver!important;text-shadow:2px 2px white!important;}
 fieldset.color0,legend.color0,.color0 .grid-item{border:2px solid black!important;}
 legend.color0 {color:silver!important;text-shadow:1px 1px black;}
 .color0 select,.color0 button{color:#000;background-color:silver!important;border-bottom:solid 3px black!important;}
+.bc-div.color0{border:2px solid white!important;}
 
 h1.color1{color:orange!important;text-shadow:2px 2px #fc007e!important;}
 fieldset.color1,legend.color1,.color1 .grid-item{border:2px solid #fc007e!important;}
 legend.color1 {color:orange!important;text-shadow:1px 1px #fc007e;}
 .color1 select,.color1 button{color:#000;background-color:orange!important;border-bottom:solid 3px #fc007e!important;}
+.bc-div.color1{border:2px solid #fc007e!important;}
 
 h1.color2{color:dodgerblue!important;text-shadow:2px 2px purple!important;}
 fieldset.color2,legend.color2,.color2 .grid-item{border:2px solid purple!important;}
 legend.color2{color:dodgerblue!important;text-shadow:1px 1px purple;}
 .color2 select,.color2 button{color:#FFF;background-color:dodgerblue!important;border-bottom:solid 3px purple!important;}
+.bc-div.color2{border:2px solid purple!important;}
 
 h1.color3{color:#98FB98!important;text-shadow:2px 2px lime!important;}
 fieldset.color3,legend.color3,.color3 .grid-item{border:2px solid lime!important;}
 legend.color3{color:#98FB98!important;text-shadow:1px 1px lime;} 
 .color3 select,.color3 button{color:#000;background-color:#98FB98!important;border-bottom:solid 3px lime!important;}
+.bc-div.color3{border:2px solid lime!important;}
 
 h1.color4{color:#D2B48C!important;text-shadow:2px 2px #B8860B!important;}
 fieldset.color4,legend.color4,.color4 .grid-item{border:2px solid #B8860B!important;}
 legend.color4{color:#D2B48C!important;text-shadow:1px 1px #B8860B;}
 .color4 select,.color4 button{color:#000;background-color:#D2B48C!important;border-bottom:solid 3px #B8860B!important;}
+.bc-div.color4{border:2px solid #B8860B!important;}
 
 h1.color5{color:#00FFFF!important;text-shadow:2px 2px #008080!important;}
 fieldset.color5,legend.color5,.color5 .grid-item{border:2px solid #008080!important;}
 legend.color5{color:#00FFFF!important;text-shadow:1px 1px #008080;}
 .color5 select,.color5 button{color:#000;background-color:#00FFFF!important;border-bottom:solid 3px #008080!important;}
+.bc-div.color5{border:2px solid #008080!important;}
 
 h1.color6{color:#B22222!important;text-shadow:2px 2px #FFCF40!important;}
 fieldset.color6,legend.color6,.color6 .grid-item{border:2px solid #FFCF40!important;}
 legend.color6{color:#B22222!important;text-shadow:1px 1px #FFCF40;}
 .color6 select,.color6 button{color:#FFF;background-color:#B22222!important;border-bottom:solid 3px #FFCF40!important;}
+.bc-div.color6{border:2px solid #FFCF40!important;}
 
 /*queries*/
 @media(max-width:1047px){.grid-item{flex-basis:8.5%;height:45px}.left{float:none;}.right{float:none;}button,select{width:100%!important;text-align:left;}}        
