--- a/css/local-styles.css
+++ b/css/local-styles.css
@@ -9,10 +9,16 @@ button{height:27px;}
 select{width:184px;height:27px;padding:2px 6px;-webkit-appearance:none;-moz-appearance:none;appearance:none;background-image:url("data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2212%22%20height%3D%2212%22%20viewBox%3D%220%200%2012%2012%22%3E%3Ctitle%3Edown-arrow%3C%2Ftitle%3E%3Cg%20fill%3D%22%23000000%22%3E%3Cpath%20d%3D%22M10.293%2C3.293%2C6%2C7.586%2C1.707%2C3.293A1%2C1%2C0%2C0%2C0%2C.293%2C4.707l5%2C5a1%2C1%2C0%2C0%2C0%2C1.414%2C0l5-5a1%2C1%2C0%2C1%2C0-1.414-1.414Z%22%20fill%3D%22%23000000%22%3E%3C%2Fpath%3E%3C%2Fg%3E%3C%2Fsvg%3E");background-size:.75em;background-position:calc(100% - .5em)center;background-repeat:no-repeat;}
 
 /*ids*/
-#app{margin:1rem 0;padding-bottom:0em;background:url("../images/numbers-bg-1920.jpg")top/45% repeat;}
+#app{margin:1rem 0;padding-bottom:1rem;background:url("../images/numbers-bg-1920.jpg")top/45% repeat;}
 #logo{margin-top: -5rem;}
+#cir-footer-wrapper {text-align:center;margin-top:5rem;}
+#cir-footer-wrapper a {color:#3d99fd;}
+#cir-footer-wrapper a:hover {color:white;}
+#cir-footer-menu {margin:0; padding-left:0; font-size:1em; text-align:center; background-color:black; padding-bottom:0px; position:fixed; bottom:0; width:100%;}
+#footer-menu li {display:inline; margin:0; padding-left:0; background-image:none;}
 
 /*classes*/
+.copyright {font-size:80%; color:white;padding-bottom:1em;}
 .trans-top,.trans-bottom{height:30px;margin-top:1.4rem;}
 .trans-top{background:linear-gradient(180deg,rgba(0,0,0,1)0%,rgba(0,212,255,0)100%);}
 .trans-bottom{background:linear-gradient(0deg,rgba(0,0,0,1)0%,rgba(0,212,255,0)100%);}
