--- a/css/local-styles.css
+++ b/css/local-styles.css
@@ -1,7 +1,7 @@
 /*elements*/
 *{margin:0;}
 html{height:vh!important;width:100%}
-body{min-height:vh!important;margin:0!important}
+body{min-height:vh!important;margin-bottom:4rem!important}
 fieldset{margin:1rem 4rem;border:2px solid #000}
 legend{font-size:1.25em;font-weight:100;background-color:#fff;border-radius:8px;padding:0px 24px 3px 6px;color:#000;border:2px solid #000;text-shadow:1px 1px silver;}
 input,select,textarea,button{font-family:inherit;font-size:inherit;background-color:silver;margin:4px;padding-top:2px;border:none;border-bottom:solid 3px #000;vertical-align:top;}
@@ -16,7 +16,7 @@ select{width:184px;height:27px;padding:2px 6px;-webkit-appearance:none;-moz-appe
 #pad{margin:-1rem 0 1rem 0;padding:1rem;}
 
 /*classes*/
-.copyright {font-size:80%; color:white;padding-bottom:1em;}
+.copyright {font-size:80%; color:white;padding:1em 0;}
 .ops-container{display:inline-block;width:100%;}
 .right{float:right;}
 .left{float:left;}
