--- a/css/local-styles.css
+++ b/css/local-styles.css
@@ -1,7 +1,5 @@
 /*elements*/
-*{margin:0;}
-html{height:100vh!important;width:100%}
-body{min-height:100vh!important;margin-bottom:4rem!important;background-color:silver;position:absolute; top:0; bottom:0; right:0; left:0;}
+body{background-color:silver;}
 fieldset{margin:1rem 4rem;border:2px solid #000}
 legend{font-size:1.25em;font-weight:100;background-color:#fff;border-radius:8px;padding:0px 24px 3px 6px;color:#000;border:2px solid #000;text-shadow:1px 1px silver;}
 input,select,textarea,button{font-family:inherit;font-size:inherit;background-color:silver;margin:4px;padding-top:2px;border:none;border-bottom:solid 3px #000;vertical-align:top;}
@@ -11,12 +9,14 @@ select{width:184px;height:27px;padding:2px 6px;-webkit-appearance:none;-moz-appe
 .selArrowsWhite{background-image:url("../images/double-down-arrow-white.png");background-size:.75em;background-position:calc(100% - .5em)center;background-repeat:no-repeat;}
 
 /*ids*/
-/*for image: #app{}background:url("../images/numbers-bg-1920.jpg")top/45% repeat;}*/
+/*for image: #app{background:url("../images/numbers-bg-1920.jpg")top/45% repeat;}*/
 #cir-footer-wrapper {text-align:center;margin-top:.5rem}
-#pad{margin:-1rem 0 1rem 0;padding:1rem;}
+#pad{margin:-1rem 0;padding:2rem 0 30vh 0;} /*shameless hack*/
+html{height:100vh!important;}
+#footer-menu{padding-top: 0.25rem;}
 
 /*classes*/
-.copyright {font-size:80%; color:white;padding:1em 0;}
+.copyright {font-size:80%; color:white;}
 .ops-container{display:inline-block;width:100%;}
 .right{float:right;}
 .left{float:left;}
